# drizzle-rs

./: .actrc  .env.example  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  act.just  bench_output.txt  docker-compose.yml  expand.txt  expanded.rs  justfile  release-plz.toml  runner_output.txt  rustc-ice-2024-10-30T09_51_51-4140.txt  test.db  test.just
bench/runner/: Cargo.toml
bench/runner/src/: capture.rs  cli.rs  code.rs  main.rs  model.rs  parity.rs  publish.rs  run.rs  schema.rs  workload_terms.rs
bench/runner/tests/: runner_smoke.rs
bench/targets/rust-pg-orms/: Cargo.toml
bench/targets/spacetime-native-rs/: Cargo.toml
cli/: Cargo.toml  schema.json
cli/src/: config.rs  error.rs  lib.rs  main.rs  output.rs  schema.rs  snapshot.rs
cli/src/commands/: check.rs  drop.rs  export.rs  generate.rs  harness.rs  init.rs  introspect.rs  migrate.rs  mod.rs  new.rs  overrides.rs  push.rs  status.rs  up.rs  upgrade.rs
cli/src/db/: d1_http.rs  filters.rs  mod.rs
cli/tests/: cli_parity.rs  integration.rs  migrate_created_at_dedupe.rs  migrate_custom_migrations_table.rs  migrate_modes.rs  migrate_tracking_upgrade.rs  parity_postgres_async_integration.rs  parity_postgres_integration.rs  parity_sqlite_integration.rs  push_explain.rs
core/: Cargo.toml
core/src/: bind.rs  builder.rs  conv.rs  conversions.rs  cte.rs  dialect.rs  error.rs  expressions.rs  helpers.rs  join.rs  lib.rs  pagination.rs  param.rs  params.rs  placeholder.rs  prepared.rs  profiling.rs  query.rs  relation.rs  schema.rs  sql.rs  tracing.rs  traits.rs
core/src/builder/: conflict.rs  states.rs
core/src/expr/: agg.rs  case.rs  cmp.rs  column_ops.rs  datetime.rs  logical.rs  math.rs  mod.rs  null.rs  ops.rs  primitives.rs  seq.rs  set.rs  string.rs  subquery.rs  typed.rs  util.rs  window.rs
core/src/expressions/: conditions.rs  mod.rs
core/src/param/: mod.rs  owned.rs
core/src/prepared/: mod.rs  owned.rs
core/src/query/: builder.rs  deser.rs  find.rs  handle.rs  mod.rs  row.rs  sql.rs  store.rs
core/src/row/: libsql.rs  mod.rs  postgres.rs  rusqlite.rs  sqlite_value.rs  turso.rs
core/src/sql/: chunk.rs  comment.rs  cte.rs  mod.rs  owned.rs  tokens.rs
core/src/traits/: column.rs  constraint.rs  foreign_key.rs  index.rs  mod.rs  param.rs  policy.rs  primary_key.rs  table.rs  to_sql.rs  tuple.rs  type_set.rs  view.rs
core/src/types/: coerce.rs  mod.rs  ops.rs
core/tests/: no_std.rs
drivers/: Cargo.toml
drivers/src/: lib.rs  libsql.rs  libsql_rusqlite.rs
drivers/tests/: libsql_rusqlite_tests.rs  rusqlite_tests.rs
examples/orm-comparison/seaorm/: Cargo.toml
examples/orm-comparison/sqlx/: Cargo.toml
migrations/: Cargo.toml
migrations/src/: build.rs  collection.rs  config.rs  dir.rs  embedded.rs  generate.rs  journal.rs  lib.rs  migrator.rs  parser.rs  schema.rs  snapshot.rs  snapshot_builder.rs  traits.rs  upgrade.rs  utils.rs  version.rs  words.rs  writer.rs
migrations/src/config/: builder.rs  cli.rs  credentials.rs  error.rs  markers.rs  mod.rs
migrations/src/parser/: combinators.rs  mod.rs  types.rs
migrations/src/postgres/: codegen.rs  collection.rs  ddl.rs  diff.rs  grammar.rs  introspect.rs  mod.rs  serializer.rs  snapshot.rs  statements.rs  table.rs
migrations/src/sqlgen/: postgres.rs  sqlite.rs
migrations/src/sqlite/: codegen.rs  collection.rs  ddl.rs  diff.rs  introspect.rs  mod.rs  serializer.rs  snapshot.rs  statements.rs  table.rs
migrations/tests/: postgres_column_alterations.rs  postgres_ddl_generation.rs  postgres_introspect_codegen.rs  renderer_parity.rs  sqlite_column_alterations.rs  sqlite_ddl_generation.rs  sqlite_introspect_codegen.rs
mysql/: Cargo.toml
mysql/src/: lib.rs
postgres/: Cargo.toml
postgres/src/: attrs.rs  aws_data_api.rs  builder.rs  common.rs  expressions.rs  helpers.rs  lib.rs  traits.rs  values.rs
postgres/src/builder/: cte.rs  delete.rs  insert.rs  prepared.rs  refresh.rs  select.rs  update.rs
postgres/src/columns/: bigint.rs  boolean.rs  bytea.rs  char.rs  date.rs  double_precision.rs  integer.rs  jsonb.rs  mod.rs  numeric.rs  real.rs  serial.rs  smallint.rs  text.rs  time.rs  timestamp.rs  uuid.rs  varchar.rs
postgres/src/expr/: array_ops.rs  ilike.rs  json_ops.rs  mod.rs  regex.rs
postgres/src/traits/: column.rs  table.rs  value.rs
postgres/src/values/: conversions.rs  drivers.rs  insert.rs  mod.rs  owned.rs  update.rs
procmacros/: Cargo.toml
procmacros/src/: combinators.rs  drivers_test.rs  drizzle.rs  drizzle_test.rs  fromrow.rs  generators.rs  lib.rs  migrations.rs  paths.rs  postgres.rs  qb.rs  rusqlite.rs  schema.rs  sql.rs  sqlite.rs  test.rs  utils.rs
procmacros/src/common/: constraint.rs  constraints.rs  context.rs  diagnostics.rs  enum_utils.rs  generators.rs  helpers.rs  mod.rs  model_markers.rs  paths.rs  query.rs  ref_gen.rs  table_pipeline.rs  type_mapping.rs  type_utils.rs  view_query.rs
procmacros/src/fromrow/: libsql.rs  mod.rs  postgres.rs  rusqlite.rs  shared.rs  turso.rs
procmacros/src/postgres/: enum.rs  field.rs  generators.rs  index.rs  mod.rs  policy.rs  schema.rs  table.rs  view.rs
procmacros/src/rusqlite/: from_row.rs
procmacros/src/sqlite/: combinators.rs  enum.rs  field.rs  generators.rs  index.rs  mod.rs  row_helpers.rs  schema.rs  table.rs  view.rs
querybuilder/: Cargo.toml
querybuilder/src/: core.rs  lib.rs  sqlite.rs
querybuilder/src/core/: expressions.rs  schema_traits.rs  traits.rs
querybuilder/src/sqlite/: common.rs  query_builder.rs
schema/: Cargo.toml
schema/src/: config.rs  writer.rs
schema/src/postgres/: diff.rs
schema/src/sqlgen/: mod.rs  postgres.rs
schema/src/sqlite/: snapshot.rs
seed/: Cargo.toml
seed/src/: batch.rs  config.rs  inference.rs  lib.rs  rng.rs  topology.rs
seed/src/datasets/: domains.rs  (+3 more)
sqlite/: Cargo.toml
sqlite/src/: attrs.rs  builder.rs  common.rs  conditions.rs  connection.rs  expr.rs  expression.rs  expressions.rs  helpers.rs  lib.rs  macros.rs  pragma.rs  traits.rs  values.rs
types/: Cargo.toml
types/src/: dialect.rs  lib.rs  migration.rs  serde_helpers.rs
(+1230 files in other folders)
