[package]
name = "drizzle"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[workspace]
resolver = "3"
members = [
  "procmacros",
  "core",
  "sqlite",
  "postgres",
  "mysql",
  "migrations",
  "types",
  "cli",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
authors = ["Mixed Nuts"]
keywords = ["drizzle", "rizzle", "orm", "database", "sqlite"]
description = "A type-safe SQL query builder for Rust"
license = "MIT"
repository = "https://github.com/themixednuts/drizzle-rs"
rust-version = "1.91"

[workspace.dependencies]
drizzle = { path = "." }
drizzle-core = { path = "./core", version = "0.1" }
drizzle-macros = { path = "./procmacros", version = "0.1" }
drizzle-mysql = { path = "./mysql", version = "0.1" }
drizzle-postgres = { path = "./postgres", version = "0.1" }
drizzle-sqlite = { path = "./sqlite", version = "0.1" }
drizzle-migrations = { path = "./migrations", version = "0.1" }
drizzle-types = { path = "./types", version = "0.1" }
regex = { version = "1.12" }
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive", "env", "color"] }
bytes = { version = "1.11" }
compact_str = { version = "0.9.0", default-features = false }
hashbrown = { version = "0.16", default-features = false, features = [
  "default-hasher",
] }
futures-util = { version = "0.3" }
libsql = { version = "0.9" }
paste = { version = "1.0" }
rand = { version = "0.9" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = [
  "derive",
  "alloc",
], default-features = false }
serde_json = { version = "1.0", default-features = false }
smallvec = { version = "1.15", default-features = false, features = [
  "union",
  "const_new",
  "const_generics",
] }
# sqlx = { version = "0.8.6", default-features = false, features = [
#   "sqlite-unbundled",
# ] }
thiserror = { version = "2.0", default-features = false }
toml = { version = "0.9" }
tokio = { version = "1.48" }
turso = { version = "0.3", default-features = false }
uuid = { version = "1.18", features = ["v4"] }
puffin = { version = "0.19" }
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
postgres = { version = "0.19.12" }
tokio-postgres = { version = "0.7.15", default-features = false, features = [
  "runtime",
] }
heck = { version = "0.5" }
postgres-types = { version = "0.2" }
nom = { version = "8.0" }

# CLI-specific dependencies
colored = { version = "3.0" }
glob = { version = "0.3" }

# Testing dependencies
tempfile = { version = "3.23" }
assert_cmd = { version = "2.1" }
predicates = { version = "3.1" }

[dev-dependencies]
divan = { version = "0.1" }
futures-util = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
puffin_egui = { version = "0.29" }
eframe = { version = "0.33" }

# External crates for type inference tests
chrono = { version = "0.4", features = ["serde"] }
geo-types = { version = "0.7", features = ["serde"] }
cidr = { version = "0.3", features = ["serde"] }
bit-vec = { version = "0.8" }

# Compile-fail test framework
trybuild = { version = "1.0" }

[[bench]]
name = "sqlite"
harness = false

[features]
default = ["std"]

# Standard library support (enabled by default)
std = ["drizzle-core/std"]

# Allocator support for no_std environments
alloc = ["drizzle-core/alloc"]

rusqlite = [
  "sqlite",
  "dep:rusqlite",
  "drizzle-sqlite?/rusqlite",
  "drizzle-macros/rusqlite",
  "drizzle-core/rusqlite",
]
turso = [
  "sqlite",
  "dep:turso",
  "drizzle-core/turso",
  "drizzle-macros/turso",
  "drizzle-sqlite?/turso",
]
libsql = [
  "sqlite",
  "dep:libsql",
  "drizzle-core/libsql",
  "drizzle-macros/libsql",
  "drizzle-sqlite?/libsql",
]
serde = [
  "dep:serde_json",
  "dep:serde",
  "drizzle-sqlite?/serde",
  "drizzle-postgres?/serde",
  "drizzle-mysql?/serde",
  "drizzle-macros/serde",
  "drizzle-core/serde",
  "rusqlite?/serde_json",
  "uuid?/serde",
]
uuid = [
  "dep:uuid",
  "drizzle-sqlite?/uuid",
  "drizzle-postgres?/uuid",
  "drizzle-mysql?/uuid",
  "drizzle-macros/uuid",
  "drizzle-core/uuid",
  "rusqlite?/uuid",
  # "sqlx?/uuid",
]

# PostgreSQL feature flags for optional types
chrono = ["drizzle-postgres?/chrono", "drizzle-macros/chrono"]
cidr = ["drizzle-postgres?/cidr", "drizzle-macros/cidr"]
geo-types = ["drizzle-postgres?/geo-types", "drizzle-macros/geo-types"]
bit-vec = ["drizzle-postgres?/bit-vec", "drizzle-macros/bit-vec"]
arrayvec = [
  "dep:arrayvec",
  "drizzle-postgres?/arrayvec",
  "drizzle-sqlite?/arrayvec",
  "drizzle-macros/arrayvec",
  "drizzle-core/arrayvec",
]

# Profiling feature
profiling = [
  "dep:puffin",
  "drizzle-core/profiling",
  "drizzle-sqlite?/profiling",
]

# Add dialect-specific features back for gating re-exports
sqlite = ["drizzle-macros/sqlite", "dep:drizzle-sqlite"]
postgres = ["drizzle-macros/postgres", "dep:drizzle-postgres"]
mysql = ["drizzle-macros/mysql", "dep:drizzle-mysql"]

# PostgreSQL driver feature flags
postgres-sync = [
  "postgres",
  "dep:postgres",
  "drizzle-postgres?/postgres-sync",
  "drizzle-macros/postgres",
]
tokio-postgres = [
  "postgres",
  "dep:tokio-postgres",
  "dep:tokio",
  "drizzle-postgres?/tokio-postgres",
  "drizzle-macros/postgres",
]
# sqlx-postgres = [
#   "postgres",
#   "dep:sqlx",
#   "sqlx/postgres",
#   "drizzle-postgres?/sqlx-postgres",
#   "drizzle-macros/sqlx-postgres",
# ]

[dependencies]
drizzle-core = { workspace = true }
drizzle-macros = { workspace = true }
drizzle-migrations = { workspace = true }
drizzle-types = { workspace = true }
paste = { workspace = true }

# Optional dependencies activated by features
drizzle-sqlite = { workspace = true, optional = true }
drizzle-postgres = { workspace = true, optional = true }
drizzle-mysql = { workspace = true, optional = true }
arrayvec = { workspace = true, optional = true }

libsql = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# sqlx = { workspace = true, optional = true, default-features = false }
turso = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
puffin = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[profile.bench]
debug = true

[profile.test]
debug = true

[profile.dev]
debug = true
