[package]
name = "drizzle_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
thiserror = { workspace = true }
rusqlite = { workspace = true, optional = true }
paste = { workspace = true }
frunk = { workspace = true }
smallvec = { workspace = true }
compact_str = { workspace = true }
turso = { workspace = true, optional = true }

[features]
default = ["col16"]
serde = ["dep:serde_json", "dep:serde"]
uuid = ["dep:uuid"]
sqlite = []
rusqlite = ["dep:rusqlite"]
turso = ["dep:turso"]

col8 = []
col16 = []
col32 = []
col64 = []
col128 = []
col200 = []
