[package]
name = "drizzle-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
time = { workspace = true, optional = true }
thiserror = { workspace = true }
rusqlite = { workspace = true, optional = true }
paste = { workspace = true }
smallvec = { workspace = true }
compact_str = { workspace = true }
hashbrown = { workspace = true }
turso = { workspace = true, optional = true }
libsql = { workspace = true, optional = true }
puffin = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
drizzle-types = { workspace = true }
arrayvec = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
cidr = { workspace = true, optional = true }
geo-types = { workspace = true, optional = true }
bit-vec = { workspace = true, optional = true }

[features]
default = ["std", "col16"]

# Standard library support (enabled by default)
std = ["compact_str/std", "smallvec/write", "thiserror/std", "drizzle-types/std"]

# Allocator support for no_std environments (compact_str is no_std by default)
alloc = ["drizzle-types/alloc"]

# Serialization
serde = ["dep:serde_json", "serde_json/alloc", "dep:serde"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
time = ["dep:time"]
arrayvec = ["dep:arrayvec"]
bytes = ["dep:bytes"]
rust-decimal = ["dep:rust_decimal"]
cidr = ["dep:cidr"]
geo-types = ["dep:geo-types"]
bit-vec = ["dep:bit-vec"]
compact-str = []

# Query API (relational query builder with JSON subqueries)
query = [
    "std",
    "dep:serde_json", "serde_json/alloc",
    "dep:serde",
    # Enable serde for wrapper types so they implement DeserializeOwned
    # (required by generated FromJsonValue impls that use T::deserialize(&Value))
    "compact_str/serde",
    "smallvec/serde",
    "bit-vec?/serde_std",
    "arrayvec?/serde",
    "bytes?/serde",
]
smallvec-types = []

# Database backends
sqlite = []
rusqlite = ["std", "dep:rusqlite"]
turso = ["std", "dep:turso"]
libsql = ["std", "dep:libsql"]
postgres-sync = ["std", "dep:postgres"]
tokio-postgres = ["std", "dep:tokio-postgres"]

# Profiling
profiling = ["std", "dep:puffin"]

# Tracing
tracing = ["dep:tracing"]

# Column count variants
col8 = ["drizzle-types/col8"]
col16 = ["drizzle-types/col16"]
col32 = ["drizzle-types/col32"]
col64 = ["drizzle-types/col64"]
col128 = ["drizzle-types/col128"]
col200 = ["drizzle-types/col200"]
