[package]
name = "drizzle-migrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Migration infrastructure for drizzle-rs"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
regex = { workspace = true, optional = true }
tempfile = { workspace = true }
heck = { workspace = true }
drizzle-types = { workspace = true, features = ["serde"] }

[dev-dependencies]
rusqlite = { workspace = true }
postgres = { workspace = true }

[features]
default = ["std"]
std = ["regex"]
