[package]
name = "mysql"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
drizzle_core = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
serde = ["dep:serde_json", "dep:serde"]
uuid = ["dep:uuid"]
