[package]
name = "drizzle-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
drizzle-core = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
rust_decimal = { version = "1.36", optional = true, features = ["serde"] }
ipnet = { version = "2.10", optional = true, features = ["serde"] }
geo-types = { version = "0.7", optional = true, features = ["serde"] }
bitvec = { version = "1.0", optional = true, features = ["serde"] }
# sqlx = { workspace = true, optional = true, default-features = false }
paste = { workspace = true }

[features]
serde = ["dep:serde_json", "dep:serde"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
rust_decimal = ["dep:rust_decimal"]
ipnet = ["dep:ipnet"]
geo-types = ["dep:geo-types"]
bitvec = ["dep:bitvec"]
# sqlx-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/uuid"]
