[package]
name = "drizzle-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
drizzle-core = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
rust_decimal = { version = "1.36", optional = true, features = ["serde"] }
ipnet = { version = "2.10", optional = true, features = ["serde"] }
geo-types = { version = "0.7", optional = true, features = ["serde"] }
bitvec = { version = "1.0", optional = true, features = ["serde"] }
arrayvec = { workspace = true, optional = true }
# sqlx = { workspace = true, optional = true, default-features = false }
paste = { workspace = true }
postgres = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
bytes = { version = "1.11", optional = true }

[features]
serde = ["dep:serde_json", "dep:serde", "postgres?/with-serde_json-1", "tokio-postgres?/with-serde_json-1"]
uuid = ["dep:uuid", "postgres?/with-uuid-1", "tokio-postgres?/with-uuid-1"]
chrono = ["dep:chrono", "postgres?/with-chrono-0_4", "tokio-postgres?/with-chrono-0_4"]
rust_decimal = ["dep:rust_decimal"]
ipnet = ["dep:ipnet"]
geo-types = ["dep:geo-types"]
bitvec = ["dep:bitvec"]
arrayvec = ["dep:arrayvec"]
# sqlx-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/uuid"]
postgres-sync = ["dep:postgres", "dep:bytes"]
tokio-postgres = ["dep:tokio-postgres", "dep:tokio", "dep:bytes"]
