[package]
name = "drizzle-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
drizzle-core = { workspace = true }
drizzle-types = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
chrono = { workspace = true, optional = true, features = ["serde"] }
cidr = { version = "0.3", optional = true, features = ["serde"] }
geo-types = { version = "0.7", optional = true, features = ["serde"] }
bit-vec = { version = "0.8", optional = true }
arrayvec = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
compact_str = { workspace = true, optional = true }
# sqlx = { workspace = true, optional = true, default-features = false }
paste = { workspace = true }
postgres = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
bytes = { version = "1.11", optional = true }

[dev-dependencies]
drizzle-macros = { workspace = true, features = ["postgres"] }
drizzle-types = { workspace = true }
drizzle-migrations = { workspace = true }

[features]
default = ["std"]
std = ["drizzle-core/std", "drizzle-types/std", "compact_str?/std"]
alloc = ["drizzle-core/alloc", "drizzle-types/alloc"]

serde = [
    "dep:serde_json",
    "dep:serde",
    "postgres?/with-serde_json-1",
    "tokio-postgres?/with-serde_json-1",
]
uuid = ["dep:uuid", "postgres?/with-uuid-1", "tokio-postgres?/with-uuid-1"]
chrono = [
    "dep:chrono",
    "postgres?/with-chrono-0_4",
    "tokio-postgres?/with-chrono-0_4",
]

cidr = ["dep:cidr", "postgres?/with-cidr-0_3", "tokio-postgres?/with-cidr-0_3"]

geo-types = [
    "dep:geo-types",
    "postgres?/with-geo-types-0_7",
    "tokio-postgres?/with-geo-types-0_7",
]

bit-vec = [
    "dep:bit-vec",
    "postgres?/with-bit-vec-0_8",
    "tokio-postgres?/with-bit-vec-0_8",
]

arrayvec = ["dep:arrayvec"]
smallvec = ["dep:smallvec"]
compact-str = ["dep:compact_str"]
bytes = ["dep:bytes"]

# sqlx-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/uuid"]

postgres-sync = ["std", "dep:postgres", "dep:bytes", "drizzle-core/postgres-sync"]
tokio-postgres = [
    "std",
    "dep:tokio-postgres",
    "dep:tokio",
    "dep:bytes",
    "drizzle-core/tokio-postgres",
]
