[package]
name = "drizzle-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
rand = { workspace = true }
heck = { version = "0.5" }
proc-macro-crate = "3.4"
paste = { workspace = true }
# Migration types for metadata generation
drizzle-migrations = { workspace = true }
# Shared type definitions
drizzle-types = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
[features]
default = []
serde = []
sqlite = []
postgres = []
mysql = []
uuid = []
arrayvec = []
# PostgreSQL optional type features
chrono = []
cidr = []
geo-types = []
bit-vec = []
rusqlite = ["sqlite"]
libsql = ["sqlite"]
turso = ["sqlite"]
# PostgreSQL driver-specific features
postgres-sync = ["postgres"]
tokio-postgres = ["postgres"]
# sqlx-postgres = ["postgres"]
